--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description: Solo is a Jekyll theme that supports single-page websites only, but
 logo: static/images/logo.png
 style: corbs
 # Build settings
+version: latest
 sampler: false
 markdown: kramdown
 exclude:
