--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,8 @@ markdown: kramdown
 exclude:
   - "README.md"
   - "Makefile"
-  - "Containerfile"
+  - "sampler.Containerfile"
+  - "solo.Containerfile"
   - ".site-build"
 sass:
   style: uncompressed
