--- a/_data/images.yml
+++ b/_data/images.yml
@@ -12,10 +12,10 @@
   description: "Red Camero, Oh yeah."
 - name: "nacho"
   src: "assets/images/general/nacho.png"
-  description: "Nachooooooo"
+  description: "Nachooooooo!!!"
 - name: "turkey"
   src: "assets/images/general/turkey.png"
-  description: "Fried bird, yummo."
+  description: "Fried bird"
 - name: "ranger-bucky"
   src: "assets/images/general/ranger-bucky.png"
   description: "Texas Ranger Bucky"
@@ -51,7 +51,7 @@
   description: "Mount Rushmore, South Dakota"
 - name: "moonpie-house-cat"
   src: "assets/images/general/moonpie-house-cat.png"
-  description: "Moonpie the house kitty"
+  description: "Moonpie the house kitty, we see your poochie poo!"
 - name: "texas-evening"
   src: "assets/images/general/texas-evening.png"
   description: "Evening in Texas"
