WIP colors section, integration of flexbox boilerplate

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Yolo, a single page theme
 tag_text: Yolo
-description: A theme for single page sites
+description: A single pager theme
 # Site customizations
 logo: assets/images/logo.png
 style: corbs
