site setting update

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: YoSo, a single page theme
-tag_text: YoSo
-description: You only single-page once
+title: Yolo, a single page theme
+tag_text: Yolo
+description: A single pager theme
 # Site customizations
 logo: assets/images/logo.png
 style: corbs
