WIP image lightbox element

--- a/_data/images.yml
+++ b/_data/images.yml
@@ -54,7 +54,7 @@
   description: "Moonpie the house kitty, we see your poochie poo!"
 - name: "texas-evening"
   src: "assets/images/general/texas-evening.png"
-  description: "Evening in Texas"
+  description: "Justa good ole evening in Texas."
 - name: "traveling-bucky"
   src: "assets/images/general/traveling-bucky.png"
   description: "Traveling Bucky"
