--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ tag_text: Yolo
 description: A single pager theme
 # Site customizations
 logo: assets/images/logo.png
-style: corbs
+style: light
 # Build settings
 version: v1.4
 sampler: false
