--- a/_data/images.yml
+++ b/_data/images.yml
@@ -1,72 +1,72 @@
 - name: "guadalupe-mountains"
-  src: "assets/images/general/guadalupe-mountains.png"
+  src: "assets/images/yolo/guadalupe-mountains.png"
   description: "Guadalupe Mountains, Texas"
 - name: "dairy-palace"
-  src: "assets/images/general/dairy-palace.png"
+  src: "assets/images/yolo/dairy-palace.png"
   description: "Dairy Palace, Canton Texas"
 - name: "drive-in"
-  src: "assets/images/general/drive-in.png"
+  src: "assets/images/yolo/drive-in.png"
   description: "Sky Vue Drive-in, Lamesa Texas"
 - name: "red-camero"
-  src: "assets/images/general/red-camero.png"
+  src: "assets/images/yolo/red-camero.png"
   description: "Red Camero, Oh yeah."
 - name: "nacho"
-  src: "assets/images/general/nacho.png"
-  description: "Nachooooooo!!!"
+  src: "assets/images/yolo/nacho.png"
+  description: "R.I.P. Nachooooooo!!!"
 - name: "turkey"
-  src: "assets/images/general/turkey.png"
+  src: "assets/images/yolo/turkey.png"
   description: "Fried bird"
 - name: "ranger-bucky"
-  src: "assets/images/general/ranger-bucky.png"
+  src: "assets/images/yolo/ranger-bucky.png"
   description: "Texas Ranger Bucky"
 - name: "best-painting-ever"
-  src: "assets/images/general/best-painting-ever.png"
-  description: "My favorite painting"
+  src: "assets/images/yolo/best-painting-ever.png"
+  description: "The best painting ever."
 - name: "devils-tower"
-  src: "assets/images/general/devils-tower.png"
+  src: "assets/images/yolo/devils-tower.png"
   description: "Devils Tower, Wyoming"
 - name: "west-texas-wind-turbines"
-  src: "assets/images/general/west-texas-wind-turbines.png"
+  src: "assets/images/yolo/west-texas-wind-turbines.png"
   description: "West Texas wind farm."
 - name: "winter-tree"
-  src: "assets/images/general/winter-tree.png"
+  src: "assets/images/yolo/winter-tree.png"
   description: "Snow tree in Dallas"
 - name: "bluebonnet"
-  src: "assets/images/general/bluebonnet.png"
+  src: "assets/images/yolo/bluebonnet.png"
   description: "Texas bluebonnet"
 - name: "big-face-bucky"
-  src: "assets/images/general/big-face-bucky.png"
+  src: "assets/images/yolo/big-face-bucky.png"
   description: "Big face Bucky"
 - name: "broken-bow-river"
-  src: "assets/images/general/broken-bow-river.png"
+  src: "assets/images/yolo/broken-bow-river.png"
   description: "Broken Bow river Oklahoma"
 - name: "paris-texas"
-  src: "assets/images/general/paris-texas.png"
+  src: "assets/images/yolo/paris-texas.png"
   description: "Paris, Texas"
 - name: "blue-camero"
-  src: "assets/images/general/blue-camero.png"
+  src: "assets/images/yolo/blue-camero.png"
   description: "Blue Camero, Oh yeah."
 - name: "mount-rushmore"
-  src: "assets/images/general/mount-rushmore.png"
+  src: "assets/images/yolo/mount-rushmore.png"
   description: "Mount Rushmore, South Dakota"
 - name: "moonpie-house-cat"
-  src: "assets/images/general/moonpie-house-cat.png"
+  src: "assets/images/yolo/moonpie-house-cat.png"
   description: "Moonpie the house kitty, we see your poochie poo!"
 - name: "texas-evening"
-  src: "assets/images/general/texas-evening.png"
+  src: "assets/images/yolo/texas-evening.png"
   description: "Justa good ole Texas evening."
 - name: "traveling-bucky"
-  src: "assets/images/general/traveling-bucky.png"
-  description: "Traveling Bucky"
+  src: "assets/images/yolo/traveling-bucky.png"
+  description: "Bucky itches his nose."
 - name: "big-sky"
-  src: "assets/images/general/big-sky.png"
+  src: "assets/images/yolo/big-sky.png"
   description: "Big Sky Texas"
 - name: "yellow-tree"
-  src: "assets/images/general/yellow-tree.png"
+  src: "assets/images/yolo/yellow-tree.png"
   description: "Yellow tree, Broken Bow"
 - name: "mustang-gt"
-  src: "assets/images/general/mustang-gt.png"
+  src: "assets/images/yolo/mustang-gt.png"
   description: "Mustang GT"
 - name: "two-santas"
-  src: "assets/images/general/two-santas.png"
-  description: "Santas at Campo Verde"
+  src: "assets/images/yolo/two-santas.png"
+  description: "Christmas at Campo Verde."
