--- a/_data/lb-images.yml
+++ b/_data/lb-images.yml
@@ -1,6 +1,6 @@
 - name: "paris-texas"
   src: "assets/images/yolo/paris-texas.png"
-  description: "A little bit of europe in Texas - Paris, Texas."
+  description: "A little bit of France in Texas - Paris, Texas."
 - name: "macpro"
   src: "assets/images/yolo/macpro.png"
   description: "Apple strikes again."
@@ -18,7 +18,7 @@
   description: "Little red camero, you need a love that's gonna last."
 - name: "west-texas-wind-turbines"
   src: "assets/images/yolo/west-texas-wind-turbines.png"
-  description: "Turning, turning and turning."
+  description: "Turning, turning, turning...and turning."
 - name: "nacho"
   src: "assets/images/yolo/nacho.png"
   description: "R.I.P. Nachooooooo!!!"
@@ -42,7 +42,7 @@
   description: "Moonpie the house kitty, we see your poochie poo!"
 - name: "mount-rushmore"
   src: "assets/images/yolo/mount-rushmore.png"
-  description: "Mount Rushmore National Monument, South Dakota"
+  description: "Mount Rushmore National Monument, South Dakota."
 - name: "dairy-palace"
   src: "assets/images/yolo/dairy-palace.png"
   description: "Dairy Palace, Canton Texas."
