--- a/_data/lb-marfa.yml
+++ b/_data/lb-marfa.yml
@@ -1,6 +1,6 @@
 - name: "greetings-from-marfa"
   src: "assets/images/marfa/greetings-from-marfa.jpg"
-  description: "Greetings from Marfa!"
+  description: "Greetings from Marfa, Texas!"
 - name: "welcome-to-marfa"
   src: "assets/images/marfa/welcome-to-marfa.jpg"
   description: "Welcome to Marfa!"
@@ -12,10 +12,10 @@
   description: "Hotel Paisano at nite, what a beauty."
 - name: "golden-range"
   src: "assets/images/marfa/golden-range.jpg"
-  description: "Golden range country outside of Marfa, TX."
+  description: "Golden range outside of Marfa, TX."
 - name: "cotton-candy-cone"
   src: "assets/images/marfa/cotton-candy-cone.jpg"
-  description: "Cotton candy ice cream cone at DQ in Marfa."
+  description: "Cotton candy dipped cone at DQ in Marfa."
 - name: "the-get-go"
   src: "assets/images/marfa/the-get-go.jpg"
   description: "The Get Go, Marfa TX."
@@ -27,7 +27,7 @@
   description: "Tumbleweed gonna tumble."
 - name: "hotel-paisano-courtyard"
   src: "assets/images/marfa/hotel-paisano-courtyard.jpg"
-  description: "Hotel Paisano courtyard view from our room."
+  description: "Hotel Paisano courtyard from our room."
 - name: "marfa-water-tower"
   src: "assets/images/marfa/marfa-water-tower.jpg"
   description: "The ole silver Marfa water tower."
