clean up README, lb-marfa.yml, and tweet my theme

--- a/_data/lb-marfa.yml
+++ b/_data/lb-marfa.yml
@@ -6,7 +6,7 @@
   description: "Welcome to Marfa!"
 - name: "court-house"
   src: "assets/images/marfa/court-house.jpg"
-  description: "The only pink court house in TX."
+  description: "Presidio County Courthouse."
 - name: "hotel-paisano-at-nite"
   src: "assets/images/marfa/hotel-paisano-at-nite.jpg"
   description: "Hotel Paisano at nite, what a beauty."
