--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ version: v1.6
 markdown: kramdown
 exclude:
   - "README.md"
+  - "BACKLOG.md"
   - "Makefile"
   - "Containerfile"
   - ".site-build"
