--- a/_data/lb-images.yml
+++ b/_data/lb-images.yml
@@ -1,84 +1,84 @@
 - name: "paris-texas"
-  src: "assets/images/yolo/paris-texas.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/paris-texas.png"
   description: "A little bit of France in Texas - Paris, Texas."
 - name: "macpro"
-  src: "assets/images/yolo/macpro.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/macpro.png"
   description: "Apple strikes again."
 - name: "porky"
-  src: "assets/images/yolo/porky.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/porky.png"
   description: "Porky makes some goooooood BBQ!"
 - name: "bluebonnet"
-  src: "assets/images/yolo/bluebonnet.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/bluebonnet.png"
   description: "A Texas Bluebonnet."
 - name: "ranger-bucky"
-  src: "assets/images/yolo/ranger-bucky.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/ranger-bucky.png"
   description: "Texas Ranger Bucky."
 - name: "red-camero"
-  src: "assets/images/yolo/red-camero.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/red-camero.png"
   description: "Little red camero, you need a love that's gonna last."
 - name: "west-texas-wind-turbines"
-  src: "assets/images/yolo/west-texas-wind-turbines.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/west-texas-wind-turbines.png"
   description: "Turning, turning, turning...and turning."
 - name: "nacho"
-  src: "assets/images/yolo/nacho.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/nacho.png"
   description: "R.I.P. Nachooooooo!!!"
 - name: "two-santas"
-  src: "assets/images/yolo/two-santas.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/two-santas.png"
   description: "Christmas at Campo Verde."
 - name: "turkey"
-  src: "assets/images/yolo/turkey.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/turkey.png"
   description: "Fry that bird, fry that bird, fry that bird!"
 - name: "mustang-gt"
-  src: "assets/images/yolo/mustang-gt.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/mustang-gt.png"
   description: "Mustang GT at the Gasquatch."
 - name: "devils-tower"
-  src: "assets/images/yolo/devils-tower.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/devils-tower.png"
   description: "Devils Tower, Wyoming."
 - name: "winter-tree"
-  src: "assets/images/yolo/winter-tree.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/winter-tree.png"
   description: "A winter tree in Dallas."
 - name: "moonpie-house-cat"
-  src: "assets/images/yolo/moonpie-house-cat.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/moonpie-house-cat.png"
   description: "Moonpie the house kitty, we see your poochie poo!"
 - name: "mount-rushmore"
-  src: "assets/images/yolo/mount-rushmore.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/mount-rushmore.png"
   description: "Mount Rushmore National Monument, South Dakota."
 - name: "dairy-palace"
-  src: "assets/images/yolo/dairy-palace.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/dairy-palace.png"
   description: "Dairy Palace, Canton Texas."
 - name: "big-sky"
-  src: "assets/images/yolo/big-sky.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/big-sky.png"
   description: "Big sky over Texas."
 - name: "morning-moonpie"
-  src: "assets/images/yolo/morning-moonpie.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/morning-moonpie.png"
   description: "I see you!"
 - name: "guadalupe-mountains"
-  src: "assets/images/yolo/guadalupe-mountains.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/guadalupe-mountains.png"
   description: "Guadalupe Mountains National Park, Texas."
 - name: "best-painting-ever"
-  src: "assets/images/yolo/best-painting-ever.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/best-painting-ever.png"
   description: "My all time favorite painting."
 - name: "texas-evening"
-  src: "assets/images/yolo/texas-evening.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/texas-evening.png"
   description: "Justa good ole Texas evening."
 - name: "traveling-bucky"
-  src: "assets/images/yolo/traveling-bucky.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/traveling-bucky.png"
   description: "Bucky itches his nose."
 - name: "blue-camero"
-  src: "assets/images/yolo/blue-camero.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/blue-camero.png"
   description: "Momma I wanna go fast."
 - name: "bucky-sleepy"
-  src: "assets/images/yolo/bucky-sleepy.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/bucky-sleepy.png"
   description: "Bucky needs a nap."
 - name: "broken-bow-river"
-  src: "assets/images/yolo/broken-bow-river.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/broken-bow-river.png"
   description: "Broken Bow river, Oklahoma."
 - name: "drive-in"
-  src: "assets/images/yolo/drive-in.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/drive-in.png"
   description: "Sky Vue Drive-in, Lamesa Texas."
 - name: "yellow-tree"
-  src: "assets/images/yolo/yellow-tree.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/yellow-tree.png"
   description: "Fall foliage in Broken Bow."
 - name: "big-face-bucky"
-  src: "assets/images/yolo/big-face-bucky.png"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/yolo/big-face-bucky.png"
   description: "Big face Bucky goes for a ride."
