--- a/_data/lb-marfa.yml
+++ b/_data/lb-marfa.yml
@@ -1,36 +1,36 @@
 - name: "greetings-from-marfa"
-  src: "assets/images/marfa/greetings-from-marfa.jpg"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/marfa/greetings-from-marfa.jpg"
   description: "Greetings from Marfa, Texas!"
 - name: "welcome-to-marfa"
-  src: "assets/images/marfa/welcome-to-marfa.jpg"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/marfa/welcome-to-marfa.jpg"
   description: "Welcome to Marfa!"
 - name: "court-house"
-  src: "assets/images/marfa/court-house.jpg"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/marfa/court-house.jpg"
   description: "Presidio County Courthouse."
 - name: "hotel-paisano-at-nite"
-  src: "assets/images/marfa/hotel-paisano-at-nite.jpg"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/marfa/hotel-paisano-at-nite.jpg"
   description: "Hotel Paisano at nite, what a beauty."
 - name: "golden-range"
-  src: "assets/images/marfa/golden-range.jpg"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/marfa/golden-range.jpg"
   description: "Golden range outside of Marfa, TX."
 - name: "cotton-candy-cone"
-  src: "assets/images/marfa/cotton-candy-cone.jpg"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/marfa/cotton-candy-cone.jpg"
   description: "Cotton candy dipped cone at DQ in Marfa."
 - name: "the-get-go"
-  src: "assets/images/marfa/the-get-go.jpg"
-  description: "The Get Go, Marfa TX."
+  src: "https://storage.googleapis.com/corbs-foto/yolo/marfa/the-get-go.jpg"
+  description: "The Get Go, get in, get go, Marfa TX."
 - name: "stardust-motel"
-  src: "assets/images/marfa/stardust-motel.jpg"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/marfa/stardust-motel.jpg"
   description: "Stardust Motel sign, Marfa TX."
 - name: "tumbleweed"
-  src: "assets/images/marfa/tumbleweed.jpg"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/marfa/tumbleweed.jpg"
   description: "Tumbleweed gonna tumble."
 - name: "hotel-paisano-courtyard"
-  src: "assets/images/marfa/hotel-paisano-courtyard.jpg"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/marfa/hotel-paisano-courtyard.jpg"
   description: "Hotel Paisano courtyard from our room."
 - name: "marfa-water-tower"
-  src: "assets/images/marfa/marfa-water-tower.jpg"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/marfa/marfa-water-tower.jpg"
   description: "The ole silver Marfa water tower."
 - name: "big-sky-marfa"
-  src: "assets/images/marfa/big-sky-marfa.jpg"
+  src: "https://storage.googleapis.com/corbs-foto/yolo/marfa/big-sky-marfa.jpg"
   description: "Big sky, Marfa TX."
