--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Yolo, a loveable single page theme
 tag_text: Yolo
 description: A loveable single page theme
 # Site customizations
-style: corbs
+style: none
 logo: assets/images/site/logo.png
 images: https://storage.googleapis.com/corbs-foto/yolo
 # Build settings
