WIP scrub index.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Yolo, a loveable single page theme
+title: Yolo on my friend
 tag_text: Yolo
-description: A loveable single page theme
+description: Loveable single page sites
 # Site customizations
 style: corbs
 logo: assets/images/site/logo.png
@@ -14,7 +14,7 @@ exclude:
   - "BACKLOG.md"
   - "Makefile"
   - "Containerfile"
-  - ".site-build"
+  - ".yolo-build"
   - "src/"
   - "docs/"
 sass:
