--- a/_data/fonts.yml
+++ b/_data/fonts.yml
@@ -12,3 +12,7 @@
   weights: "400,400i,600,600i"
 - name: "Roboto Mono"
   weights: "300,300i,400,400i,700,700i"
+- name: "Poppins"
+  weights: "200,200i,400,400i,700,700i"
+- name: "Azeret Mono"
+  weights: "200,200i,400,400i,700,700i"
