WIP syntax highlighting

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Yolo on my friend
 tag_text: Yolo
 description: Loveable single page sites
 # Site customizations
-style: corbs
+style: yinyang
 logo: assets/images/site/logo.png
 images: https://storage.googleapis.com/corbs-foto/yolo
 # Build settings
