--- a/src/samples/yolo-lite/_config.yml
+++ b/src/samples/yolo-lite/_config.yml
@@ -3,7 +3,7 @@ title: Yolo, a loveable single page theme
 tag_text: Yolo
 description: A loveable single page theme
 # Site customizations
-style: solo
+style: bookworm
 logo: assets/images/site/logo.png
 images: assets/images
 # Build settings
