--- a/_data/fonts.yml
+++ b/_data/fonts.yml
@@ -9,6 +9,9 @@
   weights: "200,200i,400,400i,700,700i"
 - name: "Source Sans Pro"
   weights: "300,300i,400,400i,700,700i"
+# Serif fonts
+- name: "Hepta Slab"
+  weights: "200,300,400,700"
 # Monospace fonts
 - name: "Inconsolata"
   weights: "400,400i,700,700i"
