WIP weekly template and theme

--- a/src/samples/yolo-weekly/_config.yml
+++ b/src/samples/yolo-weekly/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
-title: Yolo on my friend
-tag_text: Yolo
-description: Loveable single page sites
+title: Weekly
+tag_text: Weekly
+description: Status Report
 # Site customizations
 style: weekly
 logo: assets/images/site/logo.png
