--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ tag_text: Yolo
 description: Loveable single page sites
 # Site customizations
 style: corbs
-logo: assets/images/site/logo.png
+#logo: assets/images/site/logo.png
 images: https://storage.googleapis.com/corbs-foto/yolo
 sidebar: true
 # Build settings
