--- a/_data/fonts.yml
+++ b/_data/fonts.yml
@@ -39,3 +39,5 @@
   weights: "0,400;0,700;1,400;1,700"
 - name: "IBM Plex Mono"
   weights: "0,200;0,300;0,400;0,700;1,200;1,300;1,400;1,700"
+- name: "JetBrains Mono"
+  weights: "0,100;0,200;0,300;0,400;0,700;1,100;1,200;1,300;1,400;1,700"
