--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
+name: Yolo
 title: Yolo on my friend
-tag_text: Yolo
 description: Loveable single page sites
 # Site customizations
 style: corbs
