--- a/src/samples/yolo-lite/_config.yml
+++ b/src/samples/yolo-lite/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
+name: Yolo
 title: Yolo, a loveable single page theme
-tag_text: Yolo
 description: A loveable single page theme
 # Site customizations
 style: bookworm
