--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ description: Loveable single page sites
 style: corbs
 # Align content, left, center or right (default is left)
 align: left
-#logo: assets/images/site/logo.png
+#header:
+#  logo: assets/images/site/logo.png
 sidebar:
   logo: assets/images/site/logo.png
 # Build settings
@@ -14,7 +15,6 @@ version: v1.3
 markdown: kramdown
 exclude:
   - "README.md"
-  - "BACKLOG.md"
   - "Makefile"
   - "Containerfile"
   - "src/"
