--- a/_data/fonts.yml
+++ b/_data/fonts.yml
@@ -11,6 +11,10 @@
   weights: "300,300i,400,400i,700,700i"
 - name: "Red Hat Text"
   weights: "0,300;0,400;0,700;1,300;1,400;1,700"
+- name: "Roboto"
+  weights: "0,300;0,400;0,700;1,300;1,400;1,700"
+- name: "Rubik"
+  weights: "0,300;0,400;0,700;1,300;1,400;1,700"
 # Serif fonts
 - name: "Hepta Slab"
   weights: "200,300,400,700"
