--- a/src/samples/yolo-main/_config.yml
+++ b/src/samples/yolo-main/_config.yml
@@ -6,8 +6,8 @@ description: Loveable single page sites
 style: corbs
 # Align content, left, center or right (default is left)
 align: left
-#logo: assets/images/site/logo.png
-images: https://storage.googleapis.com/corbs-foto/yolo
+header:
+  logo: assets/images/site/logo.png
 sidebar:
   logo: assets/images/site/logo.png
 # Build settings
