WIP makefile open target

--- a/src/samples/yolo-main/_config.yml
+++ b/src/samples/yolo-main/_config.yml
@@ -6,16 +6,15 @@ description: Loveable single page sites
 style: corbs
 # Align content, left, center or right (default is left)
 align: left
-header:
-  logo: assets/images/site/logo.png
+#header:
+#  logo: assets/images/site/logo.png
 sidebar:
   logo: assets/images/site/logo.png
 # Build settings
-version: v1.2
+version: v1.3
 markdown: kramdown
 exclude:
   - "README.md"
-  - "BACKLOG.md"
   - "Makefile"
   - "Containerfile"
   - "src/"
