--- a/src/samples/yolo-dallas/_config.yml
+++ b/src/samples/yolo-dallas/_config.yml
@@ -4,9 +4,9 @@ description: Dallas is a beautiful sight...
 style: corbs
 align: left
 #header:
-#  logo: assets/images/site/logo.png
+#  logo: assets/images/logo.png
 #sidebar:
-#  logo: assets/images/site/logo.png
+#  logo: assets/images/logo.png
 # Build settings
 version: v1.3
 markdown: kramdown
