--- a/src/starter/data/_config.json
+++ b/src/starter/data/_config.json
@@ -5,10 +5,10 @@
   "style": "corbs",
   "align": "left",
   "header": {
-    "logo": "assets/images/site/logo.png"
+    "logo": "assets/images/logo.png"
   },
   "sidebar": {
-    "logo": "assets/images/site/logo.png"
+    "logo": "assets/images/logo.png"
   },
   "yolo": {
     "version": "v1.3"
