Open, save-as script manually tested with all src/samples

--- a/src/samples/yolo-dallas/_config.yml
+++ b/src/samples/yolo-dallas/_config.yml
@@ -3,8 +3,8 @@ title: Dallas is a jewel!
 description: Dallas is a beautiful sight...
 style: corbs
 align: left
-#header:
-#  logo: assets/images/logo.png
+header:
+  logo: assets/images/logo.png
 #sidebar:
 #  logo: assets/images/logo.png
 # Build settings
