--- a/src/samples/yolo-lite/_config.yml
+++ b/src/samples/yolo-lite/_config.yml
@@ -1,25 +1,23 @@
 # Site settings
 name: Yolo
-title: Yolo, a loveable single page theme
-description: A loveable single page theme
+title: Yolo on my friend
+description: Loveable single page sites
 # Site customizations
-style: bookworm
-header:
-  logo: assets/images/logo.png
+style: skeletor
+# Align content, left, center or right (default is left)
+align: left
+#header:
+#  logo: assets/images/logo.png
 sidebar:
   logo: assets/images/logo.png
 # Build settings
-version: v1.12
+version: v1.3
 markdown: kramdown
 exclude:
   - "README.md"
-  - "BACKLOG.md"
   - "Makefile"
   - "Containerfile"
-  - ".yolo-build"
   - "src/"
   - "docs/"
-  - "index.md.backup"
-  - "_config.yml.backup"
 sass:
   style: compressed
