setting sidebar enabled as default

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -9,5 +9,5 @@ style: corbs
 align: left
 #header:
 #  logo: assets/images/logo.png
-#sidebar:
-#  logo: assets/images/logo.png
+sidebar:
+  logo: assets/images/logo.png
