--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -5,7 +5,9 @@ name: Yolo
 version: v1.3
 title: Yolo on my friend
 description: Loveable single page sites
-style: corbs
+theme:
+  name: corbs
+  mode: dark
 align: left
 #header:
 #  logo: assets/images/logo.png
