Fix weekly sample theme

--- a/src/samples/yolo-weekly/_config.yml
+++ b/src/samples/yolo-weekly/_config.yml
@@ -1,20 +1,30 @@
-name: Weekly
-title: Weekly
-description: Status Report
-style: weekly
-align: left
-#header:
-#  logo: assets/images/logo.png
-sidebar:
-  logo: assets/images/logo.png
-# Build settings
-version: v1.3
+# -----------------------------------------------------------------------------
+# Jekyll site settings, see _data/settings.yml for Yolo settings
+# -----------------------------------------------------------------------------
+# baseurl: The sub-path your site is hosted from, for example: /blog
+# -----------------------------------------------------------------------------
+baseurl: ""
+# -----------------------------------------------------------------------------
+# url: The protocol and hostname for your site, for example: https://corbs.io
+# -----------------------------------------------------------------------------
+url: ""
+# -----------------------------------------------------------------------------
+# markdown: The markdown processor to use, kramdown is the jekyll default.
+# -----------------------------------------------------------------------------
 markdown: kramdown
+# -----------------------------------------------------------------------------
+# exclude: List of files and folders to exclude from jekyll
+# -----------------------------------------------------------------------------
 exclude:
   - "README.md"
   - "Makefile"
   - "Containerfile"
   - "src/"
   - "docs/"
+# -----------------------------------------------------------------------------
+# sass_dir: Folder that contains sass/scss files to be processed
+# style: compressed or uncompressed css generation
+# -----------------------------------------------------------------------------
 sass:
+  sass_dir: _sass
   style: compressed
