WIP syntax highlight options

--- a/_config.yml
+++ b/_config.yml
@@ -27,4 +27,4 @@ exclude:
 # -----------------------------------------------------------------------------
 sass:
   sass_dir: _sass
-  style: compressed
+  style: uncompressed
